2000-10-20  Kriston J. Rehberg  <Kriston@AOL.NET>

	*** AOLserver 3.2 RELEASED ***

2000-10-20  Jim Davidson

	* win/tclWinSock.c: Fixed deadlock in sockets init code.

	* nsd/nswin32.c: Fixed service install code to allow long
	pathnames with spaces.
	Added/use ns_pipe which set's close-on-exec like ns_sockpair.
	

2000-10-17  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nssock/sock.cpp: extra padding on Server Busy message to defeat
	MSIE friendly error messages.

	* nsd/nsconf.h: All configuration option defaults have been moved
	to nsconf.h as #defines.

	* Makefile (install): Tcl library for nsd8x is now installed into
	$(PREFIX)/lib/tcl8.3.

	* tcl/http.tcl (ns_httpopen): Host:port is now sent to remote host
	if != 80.  Suggested by Jerry Asher.

	* tcl/fastpath.tcl (_ns_dirlist): All kinds of Win32 pathnames
	should now be working.  Thanks to Eric Klein.

	* nsd/return.c (Ns_ConnReturnNotice): New options "errorminsize",
	to pad error messages to defeat MSIE friendly errors (fix
	suggested by ArsDigita) and "noticedetail" to return more detailed
	information on notice pages.

	* nslog/nslog.c: suppressquery option added to suppress logging of
	query data.

	* nslog/nslog.c: LogExtendedHEaders option added.  Contributed by
	ArsDigita.


	* nsd/tclfile.c: Input string to mktemp is copied, because mktemp
	edits the string in-place and that's generally a bad thing to do
	with argv's.  Contributed by ArsDigita.

	* nsd/tclnsshare.cpp (ShareTraceProc): Patch to tclnsshare.cpp to
	avoid race conditions if the shared value is a list.  Contributed
	by ArsDigita.

	* tcl/http.tcl (ns_httpopen): CRLF now returned in ns_httpopen.
	Contributed by ArsDigita.

	* tcl8.3.2/generic/tclCmdIL.c: Nonsense case of lsorting a list
	with length <= 0 caused a memory leak.  Fixed.  Contributed by
	ArsDigita.
	
	* nsd/adpfancy.c: We now use the Arsdigita version of adpfancy.
	Contributed by ArsDigita.
	
	* nsd/adp.c: Sundry ArsDigita changes.
